// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly in list view: Header title 1`] = `
<h4
  class="ant-typography page-header css-dev-only-do-not-override-k7429z"
>
  Patients
</h4>
`;

exports[`renders correctly in list view: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  <span>
    Apple Park
     
  </span>
</td>
`;

exports[`renders correctly in list view: table row 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  8/4/1988
</td>
`;

exports[`renders correctly in list view: table row 1 page 1 3`] = `
<td
  class="ant-table-cell"
>
  <span
    class="ant-typography css-dev-only-do-not-override-k7429z"
  >
    Inactive
  </span>
</td>
`;

exports[`renders correctly in list view: table row 1 page 1 4`] = `
<td
  class="ant-table-cell"
>
  male
</td>
`;

exports[`renders correctly in list view: table row 1 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex justify-content-start align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/fhir/Patient/52"
    >
      View
    </a>
  </span>
</td>
`;

exports[`renders correctly in list view: table row 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  <span>
    Jane Doe
     
  </span>
</td>
`;

exports[`renders correctly in list view: table row 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  8/4/1988
</td>
`;

exports[`renders correctly in list view: table row 2 page 1 3`] = `
<td
  class="ant-table-cell"
>
  <span
    class="ant-typography css-dev-only-do-not-override-k7429z"
  >
    Inactive
  </span>
</td>
`;

exports[`renders correctly in list view: table row 2 page 1 4`] = `
<td
  class="ant-table-cell"
>
  male
</td>
`;

exports[`renders correctly in list view: table row 2 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex justify-content-start align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/fhir/Patient/2"
    >
      View
    </a>
  </span>
</td>
`;

exports[`renders correctly in list view: table row 3 page 1 1`] = `
<td
  class="ant-table-cell"
>
  <span>
    John Doe
     
  </span>
</td>
`;

exports[`renders correctly in list view: table row 3 page 1 2`] = `
<td
  class="ant-table-cell"
>
  8/4/1988
</td>
`;

exports[`renders correctly in list view: table row 3 page 1 3`] = `
<td
  class="ant-table-cell"
>
  <span
    class="ant-typography css-dev-only-do-not-override-k7429z"
  >
    Inactive
  </span>
</td>
`;

exports[`renders correctly in list view: table row 3 page 1 4`] = `
<td
  class="ant-table-cell"
>
  male
</td>
`;

exports[`renders correctly in list view: table row 3 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex justify-content-start align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/fhir/Patient/1"
    >
      View
    </a>
  </span>
</td>
`;

exports[`renders correctly in list view: table row 4 page 1 1`] = `
<td
  class="ant-table-cell"
>
  <span>
    Albert Einstein
     
    <span
      class="ant-tag ant-tag-red css-dev-only-do-not-override-k7429z"
    >
      Deceased
    </span>
  </span>
</td>
`;

exports[`renders correctly in list view: table row 4 page 1 2`] = `
<td
  class="ant-table-cell"
>
  8/4/1988
</td>
`;

exports[`renders correctly in list view: table row 4 page 1 3`] = `
<td
  class="ant-table-cell"
>
  <span
    class="ant-typography css-dev-only-do-not-override-k7429z"
  >
    Inactive
  </span>
</td>
`;

exports[`renders correctly in list view: table row 4 page 1 4`] = `
<td
  class="ant-table-cell"
>
  male
</td>
`;

exports[`renders correctly in list view: table row 4 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex justify-content-start align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/fhir/Patient/3"
    >
      View
    </a>
  </span>
</td>
`;

exports[`responds as expected to errors: Header title 1`] = `
<h4
  class="ant-typography page-header css-dev-only-do-not-override-k7429z"
>
  Patients
</h4>
`;

exports[`responds as expected to errors: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
  colspan="5"
>
  <div
    class="css-dev-only-do-not-override-k7429z ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      No data
    </div>
  </div>
</td>
`;
